kubekey/builtin/core/roles/ani/smoke/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ani-smoke-http
  namespace: ani-installer-smoke
spec:
  parentRefs:
    - name: ani-smoke
      sectionName: http-b
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: ani-smoke-backend
          weight: 1
